--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,10 +16,12 @@
     <link href="css/mycss.css" rel="stylesheet">
 
     <!-- Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
 
     <!--파비콘-->
-    <link rel="shortcut icon" type="image/x-icon" href="./favicon2.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon2.ico"/>
 
 
     <!-- JS -->
@@ -47,6 +49,20 @@
         }
     </style>
 
+    <script>
+        function toRecommend() {
+            console.log('TT')
+            $.ajax({
+                type: "GET",
+                url: "/recommend",
+                success: function (response) {
+
+                }
+            })
+        }
+
+
+    </script>
 
 </head>
 <body>
@@ -65,7 +81,8 @@
     </div>
 
     <!-- Modal -->
-    <div class="modal fade modal-signin" tabindex="-1" role="dialog" id="LoginModal" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade modal-signin" tabindex="-1" role="dialog" id="LoginModal" aria-labelledby="exampleModalLabel"
+         aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content rounded-5 shadow">
                 <div class="modal-header p-5 pb-4 border-bottom-0">
@@ -77,11 +94,13 @@
                 <div class="modal-body p-5 pt-0">
                     <form class="">
                         <div class="form-floating mb-3">
-                            <input type="email" class="form-control rounded-4" id="floatingInput" placeholder="name@example.com">
+                            <input type="email" class="form-control rounded-4" id="floatingInput"
+                                   placeholder="name@example.com">
                             <label for="floatingInput">Email address</label>
                         </div>
                         <div class="form-floating mb-3">
-                            <input type="password" class="form-control rounded-4" id="floatingPassword" placeholder="Password">
+                            <input type="password" class="form-control rounded-4" id="floatingPassword"
+                                   placeholder="Password">
                             <label for="floatingPassword">Password</label>
                         </div>
                         <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Sign up</button>
@@ -89,15 +108,21 @@
                         <hr class="my-4">
                         <h2 class="fs-5 fw-bold mb-3">Or use a third-party</h2>
                         <button class="w-100 py-2 mb-2 btn btn-outline-dark rounded-4" type="submit">
-                            <svg class="bi me-1" width="16" height="16"><use xlink:href="#twitter"/></svg>
+                            <svg class="bi me-1" width="16" height="16">
+                                <use xlink:href="#twitter"/>
+                            </svg>
                             Sign up with Twitter
                         </button>
                         <button class="w-100 py-2 mb-2 btn btn-outline-primary rounded-4" type="submit">
-                            <svg class="bi me-1" width="16" height="16"><use xlink:href="#facebook"/></svg>
+                            <svg class="bi me-1" width="16" height="16">
+                                <use xlink:href="#facebook"/>
+                            </svg>
                             Sign up with Facebook
                         </button>
                         <button class="w-100 py-2 mb-2 btn btn-outline-secondary rounded-4" type="submit">
-                            <svg class="bi me-1" width="16" height="16"><use xlink:href="#github"/></svg>
+                            <svg class="bi me-1" width="16" height="16">
+                                <use xlink:href="#github"/>
+                            </svg>
                             Sign up with GitHub
                         </button>
                     </form>
@@ -105,6 +130,7 @@
             </div>
         </div>
     </div>
+
 </header>
 
 <main>
@@ -114,13 +140,17 @@
                 <h1 class="fw-light"> 오늘 뭐 먹지 ? </h1>
                 <p class="lead text-muted">간단한 질문에 답하고, 오늘의 식사를 추천 받아 보세요!</p>
                 <div>
-                    <button type="button" class="main-button" data-bs-toggle="modal" data-bs-target="#SignupPlzModal" onclick="">추천하기</button>
-                    <button class="main-button" onclick="">추천받기</button>
+                    <button type="button" class="main-button" data-bs-toggle="modal" data-bs-target="#SignupPlzModal"
+                            onclick="">추천하기
+                    </button>
+<!--                    <button class="main-button" onclick="toRecommend()">추천받기</button>-->
+                    <button class="main-button" onclick="window.location.href = '/recommend'">추천받기</button>
                 </div>
             </div>
         </div>
         <!-- Modal -->
-        <div class="modal fade" id="SignupPlzModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="SignupPlzModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+             aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
