--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ko">
+<html lang="ko" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -74,9 +74,11 @@
                 <strong>오늘 뭐 먹지?</strong>
             </a>
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#LoginModal">
-                Login
-            </button>
+<!--            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#LoginModal">-->
+<!--                Login-->
+<!--            </button>-->
+            <button class="btn btn-primary" onclick="onclick=window.location.href = '/user/login'"> Login</button>
+            <a href="/user/signup">회원가입</a>
         </div>
     </div>
 
