--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -6,6 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <title>회원가입 페이지</title>
@@ -23,11 +25,30 @@
                 box.style.display = "none";
             }
         }
+
+        function signup() {
+            let info = {
+                username: $("#username").val(),
+                password: $("#password").val(),
+                email: $("#email").val()
+            }
+            $.ajax({
+                type: 'POST',
+                url: `/signup`,
+                contentType: "application/json",
+                data: JSON.stringify(info),
+                success: function (response) {
+                    alert("회원가입이 완료되었습니다!!");
+                    //화면 라우터
+                    location.href = '/user/login';
+                }
+            })
+        }
     </script>
 </head>
 <body>
 <div id="login-form">
-    <div id="login-title">Sign up Select Shop</div>
+    <div id="login-title">회원가입하기</div>
 
     <form action="/user/signup" method="post">
         <div class="login-id-label">Username</div>
@@ -43,7 +64,7 @@
             <input id="admin-check" type="checkbox" name="admin" onclick="onclickAdmin()" style="margin-top: 40px;">관리자
             <input id="admin-token" type="password" name="adminToken" placeholder="관리자 암호" class="login-input-box" style="display:none">
         </div>
-        <button id="login-id-submit">회원 가입</button>
+        <button id="login-id-submit" onclick="signup()">회원 가입</button>
     </form>
 </div>
 </body>
