--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -31,6 +31,7 @@
                 }
             })
         }
+
     </script>
 
     <title>로그인 페이지</title>
@@ -45,10 +46,11 @@
         회원 가입하기
     </button>
         <div class="login-id-label">아이디</div>
-        <input type="text" name="username" class="login-input-box">
+        <input type="text" name="username" class="login-input-box" id="username">
+    <button>아이디 중복확인</button>
 
         <div class="login-id-label">비밀번호</div>
-        <input type="password" name="password" class="login-input-box">
+        <input type="password" name="password" class="login-input-box" id="password">
 
         <button id="login-id-submit" onclick="login()">로그인</button>
 
