--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -12,6 +12,16 @@
     <meta charset="UTF-8">
     <title>회원가입 페이지</title>
     <script>
+        function is_nickname(asValue) {
+            var regExp = /^(?=.*[a-zA-Z])[-a-zA-Z0-9_.]{2,10}$/;
+            return regExp.test(asValue);
+        }
+
+        function is_password(asValue) {
+            var regExp = /^(?=.*\d)(?=.*[a-zA-Z])[0-9a-zA-Z!@#$%^&*]{8,20}$/;
+            return regExp.test(asValue);
+        }
+
         function onclickAdmin() {
             // Get the checkbox
             var checkBox = document.getElementById("admin-check");
@@ -27,6 +37,41 @@
         }
 
         function signup() {
+            let username= $("#username").val();
+            let password= $("#password").val();
+            let password2= $("#password2").val();
+            let email= $("#email").val();
+
+            if ($("#username").hasClass("is-danger")) {
+                alert("아이디를 다시 확인해주세요.")
+                return;
+            } else if (!$("#help-id").hasClass("is-success")) {
+                alert("아이디 중복확인을 해주세요.")
+                return;
+            }
+
+            if (password == "") {
+                $("#help-password").text("비밀번호를 입력해주세요.").removeClass("is-safe").addClass("is-danger")
+                $("#password").focus()
+                return;
+            } else if (!is_password(password)) {
+                $("#help-password").text("비밀번호의 형식을 확인해주세요. 영문과 숫자 필수 포함, 특수문자(!@#$%^&*) 사용가능 8-20자").removeClass("is-safe").addClass("is-danger")
+                $("#password").focus()
+                return
+            } else {
+                $("#help-password").text("사용할 수 있는 비밀번호입니다.").removeClass("is-danger").addClass("is-success")
+            }
+            if (password2 == "") {
+                $("#help-password2").text("비밀번호를 입력해주세요.").removeClass("is-safe").addClass("is-danger")
+                $("#password2").focus()
+                return;
+            } else if (password2 != password) {
+                $("#help-password2").text("비밀번호가 일치하지 않습니다.").removeClass("is-safe").addClass("is-danger")
+                $("#password2").focus()
+                return;
+            } else {
+                $("#help-password2").text("비밀번호가 일치합니다.").removeClass("is-danger").addClass("is-success")
+            }
             let info = {
                 username: $("#username").val(),
                 password: $("#password").val(),
@@ -44,28 +89,68 @@
                 }
             })
         }
+
+        function idCheck() {
+            let username = $("#username").val()
+            console.log(username)
+            if (username == "") {
+                $("#help-id").text("아이디를 입력해주세요.").removeClass("is-safe").addClass("is-danger")
+                $("#username").focus()
+                return;
+            }
+            if (!is_nickname(username)) {
+                $("#help-id").text("아이디의 형식을 확인해주세요. 영문과 숫자, 일부 특수문자(._-) 사용 가능. 2-10자 길이").removeClass("is-safe").addClass("is-danger")
+                $("#username").focus()
+                return;
+            }
+            let info = { "username" : $("#username").val()};
+            $.ajax({
+                type: "POST",
+                url: `/signup/idcheck`,
+                contentType: "application/json",
+                data: JSON.stringify(info),
+                success: function (response) {
+                    if (response == true) {
+                        alert("아이디 중복")
+                        $("#help-id").text("이미 존재하는 아이디입니다.").removeClass("is-safe").addClass("is-danger")
+                        $("#username").focus()
+                    }
+                    else {
+                        $("#help-id").text("사용할 수 있는 아이디입니다.").removeClass("is-danger").addClass("is-success")
+                    }
+                }
+            });
+        }
+
     </script>
 </head>
 <body>
 <div id="login-form">
     <div id="login-title">회원가입하기</div>
 
-    <form action="/user/signup" method="post">
-        <div class="login-id-label">Username</div>
-        <input type="text" name="username" placeholder="Username" class="login-input-box">
 
-        <div class="login-id-label">Password</div>
-        <input type="password" name="password" class="login-input-box">
+        <div class="login-id-label">Username</div>
+        <input type="text" name="username" placeholder="Username" class="login-input-box" id="username">
+        <a onclick="idCheck()">중복확인</a>
+        <p id="help-id"></p>
+
+        <div class="login-id-label">패스워드</div>
+        <input type="password" name="password" class="login-input-box" id="password">
+        <p id="help-password"></p>
+
+        <div class="login-id-label">패스워드 재입력</div>
+        <input type="password" name="password" class="login-input-box" id="password2">
+        <p id="help-password2"></p>
 
         <div class="login-id-label">E-mail</div>
-        <input type="text" name="email" placeholder="E-mail" class="login-input-box">
+        <input type="text" name="email" placeholder="E-mail" class="login-input-box" id="email">
 
         <div>
             <input id="admin-check" type="checkbox" name="admin" onclick="onclickAdmin()" style="margin-top: 40px;">관리자
             <input id="admin-token" type="password" name="adminToken" placeholder="관리자 암호" class="login-input-box" style="display:none">
         </div>
         <button id="login-id-submit" onclick="signup()">회원 가입</button>
-    </form>
+
 </div>
 </body>
 </html>
