--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -13,6 +13,22 @@
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
 
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/mycss.css" rel="stylesheet">
+
+    <!--파비콘-->
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon2.ico"/>
+
+    <!-- JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+
+    <!-- 구글 폰트 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
+
     <!--카카오 로그인-->
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script><meta charset="UTF-8">
 
@@ -61,23 +77,44 @@
     <title>로그인 페이지</title>
 </head>
 <body>
-<div id="login-form">
-    <div id="login-title">로그인 하는 페이지입니다</div>
-    <button id="login-kakao-btn" onclick="loginWithKakao()">
-        카카오로 로그인하기
-    </button>
-    <button id="login-id-btn" onclick="location.href='/user/signup'">
-        회원 가입하기
-    </button>
-        <div class="login-id-label">아이디</div>
-        <input type="text" name="username" class="login-input-box" id="username">
-    <button>아이디 중복확인</button>
+<header>
+    <!--    네비게이션바-->
+    <div class="navbar navbar-dark bg-dark shadow-sm">
+        <div class="nav-container">
+            <div class="nav-title-box">
+                <a href="#" class="title nav-text" style="padding-top: 5px;">오늘 뭐 먹지?</a>
+                <a href="/" class="nave-menu-text nav-menu">뭐먹을지 추천받기</a>
+                <a href="/" class="nave-menu-text nav-menu">맛있는거 추천받기</a>
+                <a href="/" class="nave-menu-text nav-menu">이세상 음식 전부보기</a>
+            </div>
+            <biv class="nav-botton-box">
+                <button class="nav-button" onclick="window.location.href = '/user/login'" id="login">로그인</button>
+                <button class="nav-button" id="logout">로그아웃</button>
+                <button class="nav-button" onclick="window.location.href = '/user/mypage'" id="mypage">마이페이지</button>
+            </biv>
+        </div>
+    </div>
+</header>
 
-        <div class="login-id-label">비밀번호</div>
-        <input type="password" name="password" class="login-input-box" id="password">
+<main>
+    <div class="log-in-box">
+        <p style="margin-top:30px; margin-bottom: 5px; font-weight: bold; font-size: 12pt;">&nbsp;&nbsp;아이디</p>
+        <div class="box">
+            <div class="signup-button-idcheck-box"><input type="text" id="username" class="signup-input-id" placeholder="아이디" style="width: 534px;"></div>
+        </div>
+        <div class="help help-id" id="help-id">&nbsp;&nbsp;</div>
+        <p style="margin-top:0px; margin-bottom: 5px; font-weight: bold; font-size: 12pt;">&nbsp;&nbsp;비밀번호</p>
+        <input type="password" id="password" placeholder="비밀번호" class="signup-input">
+        <!--        <div class="help help-password" id="help-password">&nbsp;&nbsp;영문과 숫자 필수 포함, 특수문자(!@#$%^&*) 사용가능 8-20자</div>-->
+        <div class="login-button" style="margin-top: 20px;">
+            <button class="signup-button kakao" onclick="loginWithKakao()">카카오 로그인</button>
+            <button class="signup-button" onclick="login()">로그인</button>
+        </div>
+        <hr style="background-color: darkgray; margin-top:40px;">
+        <p style="margin-top:30px; margin-bottom: 5px; font-weight: bold; font-size: 12pt; text-align: center; margin-bottom: 20px">아직 회원이 아니시라면 가입해주세요!</p>
+        <button onclick="location.href='/user/signup'" class="signup-button" style="width: 100%; margin: 20px 0 0;">회원가입</button>
+    </div>
+</main>
 
-        <button id="login-id-submit" onclick="login()">로그인</button>
-
-</div>
 </body>
 </html>
