--- a/src/main/resources/static/mypage.html
+++ b/src/main/resources/static/mypage.html
@@ -22,7 +22,7 @@
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 
     <!--파비콘-->
-    <link rel="shortcut icon" type="image/x-icon" href="favicon2.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon2.ico"/>
 
 
     <!-- JS -->
