--- a/src/main/resources/static/recommend.html
+++ b/src/main/resources/static/recommend.html
@@ -25,7 +25,7 @@
             crossorigin="anonymous"></script>
 
     <!--파비콘-->
-    <link rel="shortcut icon" type="image/x-icon" href="favicon2.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon2.ico" />
 
     <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
