--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -21,7 +21,7 @@
             crossorigin="anonymous"></script>
 
     <!--파비콘-->
-    <link rel="shortcut icon" type="image/x-icon" href="favicon2.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon2.ico"/>
 
 
     <!-- JS -->
