--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -89,11 +89,13 @@
             </div>
             <biv class="nav-botton-box">
                 <button class="nav-button" onclick="window.location.href = '/user/login'" id="login">로그인</button>
-                <button class="nav-button" id="logout">로그아웃</button>
-                <button class="nav-button" onclick="window.location.href = '/user/mypage'" id="mypage">마이페이지</button>
+                <button class="nav-button" onclick="window.location.href = '/user/signup'">회원가입</button>
+<!--                <button class="nav-button" id="logout">로그아웃</button>-->
+<!--                <button class="nav-button" onclick="window.location.href = '/user/mypage'" id="mypage">마이페이지</button>-->
             </biv>
         </div>
     </div>
+
 </header>
 
 <main>
