--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -14,8 +14,8 @@
             crossorigin="anonymous"></script>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/mycss.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/mycss.css" rel="stylesheet">
 
     <!--파비콘-->
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon2.ico"/>
