--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -11,9 +11,9 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/album/">
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
-    <link href="css/mycss.css" rel="stylesheet">
+    <link href="/css/mycss.css" rel="stylesheet">
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
