작업 진행중 (likedfood)

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -88,8 +88,8 @@
                 <a href="/" class="nave-menu-text nav-menu">이세상 음식 전부보기</a>
             </div>
             <biv class="nav-botton-box">
-                <button class="nav-button" onclick="window.location.href = '/user/login'" id="login">로그인</button>
-                <button class="nav-button" onclick="window.location.href = '/user/signup'">회원가입</button>
+                <button class="nav-button" onclick="window.location.href = '/login.html'" id="login">로그인</button>
+                <button class="nav-button" onclick="window.location.href = '/signup.html'">회원가입</button>
             </biv>
         </div>
     </div>
