--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -175,9 +175,8 @@
                 <a href="/" class="nave-menu-text nav-menu">이세상 음식 전부보기</a>
             </div>
             <biv class="nav-botton-box">
-                <button class="nav-button" onclick="window.location.href = '/user/login'" id="login">로그인</button>
-                <button class="nav-button" onclick="window.location.href = '/user/signup'">회원가입</button>
-<!--                <button class="nav-button" onclick="window.location.href = '/user/mypage'" id="mypage">마이페이지</button>-->
+                <button class="nav-button" onclick="window.location.href = '/login.html'" id="login">로그인</button>
+                <button class="nav-button" onclick="window.location.href = '/signup.html'">회원가입</button>
             </biv>
         </div>
     </div>
@@ -198,18 +197,8 @@
         <div class="help help-password" id="help-password2">&nbsp;&nbsp;비밀번호를 다시 입력해주세요.</div>
         <p style="margin-top:15px; margin-bottom: 5px; font-weight: bold; font-size: 12pt;">&nbsp;&nbsp;이메일</p>
         <input type="password" id="email" placeholder="이메일" class="signup-input">
-<!--        <div class="login-button" style="margin-top: 20px;">-->
-<!--            <button class="signup-button kakao">카카오 로그인</button>-->
-<!--            <button class="signup-button">로그인</button>-->
-<!--        </div>-->
-<!--        <hr style="background-color: darkgray; margin-top:40px;">-->
-<!--        <p style="margin-top:30px; margin-bottom: 5px; font-weight: bold; font-size: 12pt; text-align: center; margin-bottom: 20px">아직 회원이 아니시라면 가입해주세요!</p>-->
         <button onclick="signup()" class="signup-button" style="width: 100%; margin: 20px 0 0;">회원가입</button>
     </div>
 </main>
-<!--        <div>-->
-<!--            <input id="admin-check" type="checkbox" name="admin" onclick="onclickAdmin()" style="margin-top: 40px;">관리자-->
-<!--            <input id="admin-token" type="password" name="adminToken" placeholder="관리자 암호" class="login-input-box" style="display:none">-->
-<!--        </div>-->
 </body>
 </html>
