첫 커밋. 포스팅 진행 음

--- a/src/main/resources/static/mypage.html
+++ b/src/main/resources/static/mypage.html
@@ -211,6 +211,9 @@
                 "foodImgUrl":$("#foodurl").val(),
                 "tag":$("#tagname1").val()
             }
+
+            console.log(info);
+
             $.ajax({
                 type:"POST",
                 url:"/post",
